2011-04-11  Romain Francois  <romain@r-enthusiasts.com>

	* R/loadRcppModules.R: New R function "loadRcppModules" that looks
	for the "RcppModules" field in the DESCRIPTION file, loads and
	populates the modules into the package NAMESPACE

	* man/loadRcppModules.Rd: documentation

	* inst/unitTests/testRcppModule: using loadRcppModules

2011-04-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/man/Rcpp-package.Rd: Added JSS reference in \references{}

	* inst/doc/*: Added JSS reference to vignettes

2011-04-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/CITATION: Finalized using JSS data on volume, number, pages

2011-04-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-quickref/Rcpp-quickref.Rnw: Add patch by Christian
	pointing out need for Rcpp:: namespace qualifier, and hint for Rcpp-FAQ

2011-04-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Added OS X entry for min. sufficient
	versions of OS X itself and Xode based on Simon's post to rcpp-devel

2011-04-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.3
        * inst/NEWS: Release 0.9.3
        * inst/include/Rcpp/config.h: Release 0.9.3
        * debian/*: Similarly updated for new release to Debian

2011-04-05  Romain Francois  <romain@r-enthusiasts.com>

	* R/01_show.R: set of cosmetic changes to the show method for C++
	classes

	* inst/include/Rcpp/Module.h: fixed module bug by not using
	singletons of the class_ template

2011-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-introduction.Rnw: Updated to forthcoming JSS paper

	* inst/CITATION: Added citation() support using forthcoming paper

	* inst/doc/Makefile: Trying make parallel builds possible by not calling
	'clean' in the 'all' target; thanks to Brian Ripley for the heads-up

2011-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* cleanup: Also clean in inst/unitTest/testRcppModule/src/

	* inst/include/RcppCommon.h: Define new variable for g++ < 4.6.0